tests/toy/neg/001686_mutation.toylang
program a = { while 0 a do sleep; } .
